一，功能 1，抽象出 XGame类，相当于游戏的入口，介于引擎层和逻辑层之间。 2，抽象出 XModel类，用于封装模型数据 3，抽出 DrawCube类，用于绘制模型，测试
二，修复
修复因为WM_PAINT 被return掉而导致的WM_PAINT不断发送的问题，BUG现象为：循环陷入在while(peekmessage(..))和 wm_paint之间，导致xgame.Update永远不会被执行

--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -150,11 +150,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DrawCube.cpp" />
     <ClCompile Include="test.cpp" />
+    <ClCompile Include="XGame.cpp" />
+    <ClCompile Include="XModel.cpp" />
     <ClCompile Include="XVulkan.cpp" />
     <ClCompile Include="XWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DrawCube.h" />
+    <ClInclude Include="model.h" />
+    <ClInclude Include="XGame.h" />
+    <ClInclude Include="XModel.h" />
     <ClInclude Include="XVulkan.h" />
     <ClInclude Include="XWindow.h" />
   </ItemGroup>
