--- a/examples/testx/test.vcxproj.filters
+++ b/examples/testx/test.vcxproj.filters
@@ -24,12 +24,33 @@
     <ClCompile Include="XVulkan.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="XModel.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawCube.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="XGame.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XWindow.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="XVulkan.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="XModel.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawCube.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="XGame.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
