1，添加XUtil文件，用于存放常用工具函数，比如【比较两个类型是否相同】，打印LOG等 后面将会添加XFileUtil文件，用于文件常用操作，XStrUtil文件，用于字符串常用操作 2，添加 XGameObject 类，功能类似于U3D的 GameObject，实现了 addcomponent, getcomponent, removecomponent, RemoveAllComponents 等功能 3，添加 XComponent 类，功能类似于U3D的 Component
4，重构：头文件与CPP文件严格分开，实现只能写到CPP中
头文件一般只需要包含需要继承的类，其它都不需要包含
 4.1 如果需要用到其它类型，则用指针类型，并在类前进行前置声明

--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -21,21 +21,27 @@
   <ItemGroup>
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="DrawCube.cpp" />
+    <ClCompile Include="XComponent.cpp" />
     <ClCompile Include="XGame.cpp" />
     <ClCompile Include="XGameMgr.cpp" />
+    <ClCompile Include="XGameObject.cpp" />
     <ClCompile Include="XModel.cpp" />
     <ClCompile Include="XObject.cpp" />
     <ClCompile Include="XObjectMgr.cpp" />
+    <ClCompile Include="XUtils.cpp" />
     <ClCompile Include="XVulkan.cpp" />
     <ClCompile Include="XWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawCube.h" />
+    <ClInclude Include="XComponent.h" />
     <ClInclude Include="XGame.h" />
     <ClInclude Include="XGameMgr.h" />
+    <ClInclude Include="XGameObject.h" />
     <ClInclude Include="XModel.h" />
     <ClInclude Include="XObject.h" />
     <ClInclude Include="XObjectMgr.h" />
+    <ClInclude Include="XUtils.h" />
     <ClInclude Include="XVulkan.h" />
     <ClInclude Include="XWindow.h" />
   </ItemGroup>
