1，组件，添加gameobject指针，指向组件所在的gameobject，同U3D的机制 2，添加 transform组件，同U3D机制

--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="XModel.cpp" />
     <ClCompile Include="XObject.cpp" />
     <ClCompile Include="XObjectMgr.cpp" />
+    <ClCompile Include="XTransform.cpp" />
     <ClCompile Include="XUtils.cpp" />
     <ClCompile Include="XVulkan.cpp" />
     <ClCompile Include="XWindow.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="XModel.h" />
     <ClInclude Include="XObject.h" />
     <ClInclude Include="XObjectMgr.h" />
+    <ClInclude Include="XTransform.h" />
     <ClInclude Include="XUtils.h" />
     <ClInclude Include="XVulkan.h" />
     <ClInclude Include="XWindow.h" />
