--- a/examples/testx/test.vcxproj.filters
+++ b/examples/testx/test.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="XComponent.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="XTransform.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGameMgr.h">
@@ -84,6 +87,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="XComponent.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="XTransform.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
