重构： XComponent 不再继承于 XGameObject，因为这样会导致【允许组件添加组件】，参考了U3D的设计，XComponent和 XGameObject都继承自 XObject。 由于以上原因，OnStart, OnUpdate, OnDestroy 虚函数再次由 XGameObject 移回到了 XObject中

--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="DrawCube.cpp" />
+    <ClCompile Include="XCamera.cpp" />
     <ClCompile Include="XComponent.cpp" />
     <ClCompile Include="XGame.cpp" />
     <ClCompile Include="XGameMgr.cpp" />
@@ -35,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawCube.h" />
+    <ClInclude Include="XCamera.h" />
     <ClInclude Include="XComponent.h" />
     <ClInclude Include="XGame.h" />
     <ClInclude Include="XGameMgr.h" />
