--- a/examples/testx/test.vcxproj.filters
+++ b/examples/testx/test.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="XTransform.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="XCamera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGameMgr.h">
@@ -90,6 +93,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="XTransform.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="XCamera.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
