--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="DrawCube.cpp" />
+    <ClCompile Include="GLMTest.cpp" />
     <ClCompile Include="XCamera.cpp" />
     <ClCompile Include="XComponent.cpp" />
     <ClCompile Include="XGame.cpp" />
@@ -36,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawCube.h" />
+    <ClInclude Include="GLMTest.h" />
     <ClInclude Include="XCamera.h" />
     <ClInclude Include="XComponent.h" />
     <ClInclude Include="XGame.h" />
