--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="XModel.cpp" />
     <ClCompile Include="XObject.cpp" />
     <ClCompile Include="XObjectMgr.cpp" />
+    <ClCompile Include="XRender.cpp" />
     <ClCompile Include="XTransform.cpp" />
     <ClCompile Include="XUtils.cpp" />
     <ClCompile Include="XVulkan.cpp" />
@@ -46,6 +47,7 @@
     <ClInclude Include="XModel.h" />
     <ClInclude Include="XObject.h" />
     <ClInclude Include="XObjectMgr.h" />
+    <ClInclude Include="XRender.h" />
     <ClInclude Include="XTransform.h" />
     <ClInclude Include="XUtils.h" />
     <ClInclude Include="XVulkan.h" />
