--- a/examples/testx/test.vcxproj.filters
+++ b/examples/testx/test.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="GLMTest.cpp">
       <Filter>头文件</Filter>
     </ClCompile>
+    <ClCompile Include="XRender.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGameMgr.h">
@@ -102,6 +105,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="GLMTest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="XRender.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
