--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="XObject.cpp" />
     <ClCompile Include="XObjectMgr.cpp" />
     <ClCompile Include="XRender.cpp" />
+    <ClCompile Include="XVKShader.cpp" />
     <ClCompile Include="XTransform.cpp" />
     <ClCompile Include="XUtils.cpp" />
     <ClCompile Include="XVulkan.cpp" />
@@ -48,6 +49,7 @@
     <ClInclude Include="XObject.h" />
     <ClInclude Include="XObjectMgr.h" />
     <ClInclude Include="XRender.h" />
+    <ClInclude Include="XVKShader.h" />
     <ClInclude Include="XTransform.h" />
     <ClInclude Include="XUtils.h" />
     <ClInclude Include="XVulkan.h" />
@@ -125,7 +127,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>%VULKAN_SDK%\include;..\libs;..\libs\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%VULKAN_SDK%\include;%VULKAN_SDK%\glslang;..\libs;..\libs\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
