添加材质类 XMaterial

--- a/examples/testx/test.vcxproj
+++ b/examples/testx/test.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="XGame.cpp" />
     <ClCompile Include="XGameMgr.cpp" />
     <ClCompile Include="XGameObject.cpp" />
+    <ClCompile Include="XMaterial.cpp" />
     <ClCompile Include="XMesh.cpp" />
     <ClCompile Include="XModel.cpp" />
     <ClCompile Include="XObject.cpp" />
@@ -45,6 +46,7 @@
     <ClInclude Include="XGame.h" />
     <ClInclude Include="XGameMgr.h" />
     <ClInclude Include="XGameObject.h" />
+    <ClInclude Include="XMaterial.h" />
     <ClInclude Include="XMesh.h" />
     <ClInclude Include="XModel.h" />
     <ClInclude Include="XObject.h" />
