--- a/examples/testx/test.vcxproj.filters
+++ b/examples/testx/test.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="XMesh.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="XMaterial.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XGameMgr.h">
@@ -114,6 +117,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="XMesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="XMaterial.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
